PDF pinch zoom: Update layer transform for a zoom out after a zoom in.

Currently, whenever we pinch zoom out, we clear any layer transform and
reraster at the new zoom level. However, during a pinch zoom in (and
especially when slowly panning), we may get occasional zoom out events
which cause us to clear the layer transform. As the zoom in continues
we will then set the layer transform again. This repeated setting and
clearing causes noticeable jumping back and forth of the PDF content.

In this patch, when we get a pinch zoom out, if a layer transform is
already set due to a previous zoom in, we update the layer transform
instead of clearing it.

BUG=664157

Review-Url: https://codereview.chromium.org/2541903002
Cr-Commit-Position: refs/heads/master@{#436640}

Former-commit-id: a6e4fc5905ae3e09f54d0c7a2e0fb9d89badb435